--- a/calculator.css
+++ b/calculator.css
@@ -65,6 +65,10 @@ body{
     border: none;
     outline: none;
 }
+.box select option :hover{
+background:  #3737f6;
+color: #fff;
+}
 .box div input[type="button"]{
     border-bottom: none;
     cursor: pointer;
