--- a/calculator.css
+++ b/calculator.css
@@ -6,6 +6,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+/* styling the box div */
 .box{
     position: absolute;
     top: 50%;
@@ -18,6 +19,15 @@ body{
     border:  1px solid rgba(0,0,0,.1);
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
 }  
+/* styling the heading */
+.box h2{
+    margin: 0 0 40px;
+    padding: 0;
+    color: #3737f6;
+    text-transform: uppercase;
+    text-align: center;
+} 
+/* styling the two input fields */
 .box div input{
     width: 100%;
     padding: 10px 0;
@@ -27,13 +37,8 @@ body{
     box-sizing: border-box;
     border-bottom: 2px solid #999;
 } 
-.box h2{
-    margin: 0 0 40px;
-    padding: 0;
-    color: #3737f6;
-    text-transform: uppercase;
-    text-align: center;
-}    
+ 
+
 .box form div{
     position: relative;
 }
@@ -56,6 +61,7 @@ body{
 .box  input:valid{
     border-bottom: 2px solid #3737f6;
 }
+/* Styling the option for number of cylinders and measurement units */
 .box select{
     padding: 10px;
     width: 100%;
@@ -65,10 +71,7 @@ body{
     border: none;
     outline: none;
 }
-.box select option :hover{
-background:  #3737f6;
-color: #fff;
-}
+/* Styling the calculate button */
 .box div input[type="button"]{
     border-bottom: none;
     cursor: pointer;
@@ -86,6 +89,7 @@ color: #fff;
     pointer-events: none;
     margin: 0;
 }
+/* styling the result element */
 #res {
     text-align: center;
     color: rgb(97, 97, 97);
